Адаптив для главного экрана

--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -17,3 +17,12 @@ body
 	border: none
 	background: $accent
 	+bold
+
+@media	(max-width: 576px)
+	.button-o
+		font-size: 10px
+		padding: 12px 18px
+	
+				
+
+
