--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -12,4 +12,12 @@
 @media	(max-width: 768px)
 	.container
 		max-width: 100%
-		padding: 0 15px			
+		padding: 0 15px	
+	.input
+		margin-bottom: 10px	
+@media	(max-width: 375px)
+	.container
+		width: 100%
+		padding: 0 5px		
+	.form
+		width: 100%				
