--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,17 @@ body {
   color: #262626;
 }
 
+.section {
+  margin: 100px 0;
+}
+
+.section-title {
+  font-size: 30px;
+  font-family: 'Proxima Nova Semibold', sans-serif;
+  text-align: center;
+  margin-bottom: 100px;
+}
+
 .button-o {
   text-transform: uppercase;
   background: transparent;
@@ -435,6 +446,45 @@ input[type="checkbox"]:checked + label:before {
   .offer__block {
     width: 100%;
     padding: 0 5px;
+  }
+}
+
+.features-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.features-block__item {
+  text-align: center;
+  width: 33.33%;
+  margin-bottom: 100px;
+}
+
+.features-block__item img {
+  width: 36px;
+  height: 36px;
+}
+
+@media (max-width: 768px) {
+  .features .section-title {
+    margin-top: 200px;
+    font-size: 24px;
+  }
+  .features-block__item {
+    width: 50%;
+    margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 576px) {
+  .features-block__item {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
