--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,6 +1,13 @@
 body
 	+light
 	color: $text-color
+.section
+	margin: 100px 0
+	&-title
+		font-size: 30px
+		+bold 
+		text-align: center
+		margin-bottom: 100px	
 .button-o
 	text-transform: uppercase
 	background: transparent
