--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,34 @@ body {
   font-family: 'Proxima Nova Semibold', sans-serif;
 }
 
+.button-fitting {
+  padding: 10px;
+  text-transform: uppercase;
+  color: #507fe1;
+  background: #fff;
+  border: none;
+  font-size: 11px;
+}
+
+.button-add {
+  background: #7c9fe8;
+  padding: 10px;
+  font-size: 11px;
+  border: none;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.button-like {
+  border: none;
+  background: #507fe1;
+  padding: 7.5px 10px;
+}
+
+.button-like img {
+  display: block;
+}
+
 .bg-secondary {
   background: #f1f1f1;
 }
@@ -132,6 +160,12 @@ input[type="checkbox"]:checked + label:before {
   border: 1px solid #ddd;
   margin-right: 20px;
   cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .section-title {
+    font-size: 24px;
+  }
 }
 
 @media (max-width: 576px) {
@@ -474,7 +508,6 @@ input[type="checkbox"]:checked + label:before {
 @media (max-width: 768px) {
   .features .section-title {
     margin-top: 200px;
-    font-size: 24px;
   }
   .features-block__item {
     width: 50%;
@@ -484,6 +517,56 @@ input[type="checkbox"]:checked + label:before {
 
 @media (max-width: 576px) {
   .features-block__item {
+    width: 100%;
+  }
+}
+
+.catalog-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.catalog-card {
+  width: 48%;
+  position: relative;
+  margin-bottom: 30px;
+  -webkit-box-shadow: 7px 5px 21px rgba(0, 0, 0, 0.1);
+          box-shadow: 7px 5px 21px rgba(0, 0, 0, 0.1);
+}
+
+.catalog-card img {
+  display: block;
+  width: 100%;
+}
+
+.catalog-card__button {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.catalog-card__tag {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #ffffff;
+  padding: 10px;
+  background: rgba(80, 127, 225, 0.6);
+}
+
+@media (max-width: 768px) {
+  .catalog-card {
     width: 100%;
   }
 }
