--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -1,5 +1,7 @@
 *
 	box-sizing: border-box
+.section
+	padding: 100px 0	
 .container
 	max-width: 1170px
 	margin: 0 auto
@@ -10,6 +12,8 @@
 	.container
 		max-width: 750px
 @media	(max-width: 768px)
+	.section
+		padding: 50px 0
 	.container
 		max-width: 100%
 		padding: 0 15px	
