--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,8 +1,7 @@
 body
 	+light
 	color: $text-color
-.section
-	margin: 100px 0
+.section	
 	&-title
 		font-size: 30px
 		+bold 
@@ -23,6 +22,7 @@ body
 	color: #ffffff
 	border: none
 	background: $accent
+	text-decoration: none
 	+bold
 	&-fitting 
 		padding: 10px
@@ -72,6 +72,8 @@ input[type="checkbox"]
 			cursor: pointer
 @media (max-width: 768px)	
 	.section
+		&-title
+			margin-bottom: 50px
 		&-title
 			font-size: 24px			
 	
