--- a/sass/blocks/_catalog.sass
+++ b/sass/blocks/_catalog.sass
@@ -1,4 +1,5 @@
 .catalog
+	background: #f5f6f8
 	&-block
 		display: flex 
 		justify-content: space-between
@@ -25,6 +26,16 @@
 			color: #ffffff
 			padding: 10px
 			background: rgba($accent,.6)
+	&__link
+		display: flex
+		justify-content: center
+		align-items: center
+		margin-top: 60px
+		margin-bottom: 20px
+	&__description
+		display: block
+		text-align: center	
+				
 @media (max-width: 768px)
 	.catalog
 		&-card
