--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ body {
   border: none;
   background: #507fe1;
   text-decoration: none;
+  cursor: pointer;
   font-family: 'Proxima Nova Semibold', sans-serif;
 }
 
@@ -683,6 +684,115 @@ input[type="checkbox"]:checked + label:before {
     font-size: 10px;
   }
   .blog-list__card {
+    width: 98%;
+  }
+}
+
+.price-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.price-block__card {
+  width: 24%;
+  margin-bottom: 20px;
+  position: relative;
+  background: #fff;
+  -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.05);
+          box-shadow: 0 5px 5px rgba(0, 0, 0, 0.05);
+}
+
+.price-block__card:hover .price-block__text .price-block__button {
+  z-index: 99;
+  bottom: -60px;
+  opacity: 1;
+}
+
+.price-block__img {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  overflow: hidden;
+  height: 200px;
+}
+
+.price-block__img img {
+  display: block;
+  width: 100%;
+}
+
+.price-block__text {
+  padding: 20px;
+  position: relative;
+}
+
+.price-block__pricetag {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+
+.price-block__title {
+  margin: 0;
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.price-block__cost {
+  font-size: 15px;
+  font-family: 'Proxima Nova Semibold', sans-serif;
+}
+
+.price-block__button {
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  background: #fff;
+  white-space: nowrap;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 20px;
+  -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.05);
+          box-shadow: 0 5px 5px rgba(0, 0, 0, 0.05);
+  opacity: 0;
+  -webkit-transition: bottom, opacity .5s ease;
+  transition: bottom, opacity .5s ease;
+  z-index: -1;
+}
+
+@media (max-width: 1024px) {
+  .price-block__title {
+    font-size: 12px;
+  }
+  .price-block__cost {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 768px) {
+  .price-block__card {
+    width: 48%;
+  }
+}
+
+@media (max-width: 768px) {
+  .price-block__card {
     width: 98%;
   }
 }
