--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -5,6 +5,8 @@
 .container
 	max-width: 1170px
 	margin: 0 auto
+.bg 
+	background: #f5f6f8	
 @media	(max-width: 1199px)
 	.container
 		max-width: 960px
