--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,3 +9,6 @@
 @import 'blocks/catalog'
 @import 'blocks/blog-list'
 @import 'blocks/price'
+@import 'blocks/steps'
+@import 'blocks/review'
+@import 'blocks/factory'
