--- a/sass/blocks/_offer.sass
+++ b/sass/blocks/_offer.sass
@@ -20,8 +20,11 @@
 		margin-bottom: 20px
 	&__subtitle
 		display: block
-		font-size: 21px	
+		font-size: 20px	
 		margin-bottom: 48px	
+		max-width: 600px
+	
+
 .form
 	&__row
 		display: flex
@@ -45,6 +48,14 @@
 		height: 80px
 		width: 100%	
 		cursor: pointer	
+	&__policy
+		display: block
+		width: 320px
+		margin-left: 40px
+.secondary
+	&-block
+		top: 0
+
 
 @media	(max-width: 1199px)
 	.offer
@@ -72,6 +83,12 @@
 				flex-direction: column
 			&__group
 				width: 100%	
+			&__policy
+				display: block
+				width: 100%
+				margin-left: 0
+				text-align: center
+				margin-top: 20px		
 	.form
 		&__checkbox
 			justify-content: flex-start
