--- a/sass/blocks/_factory.sass
+++ b/sass/blocks/_factory.sass
@@ -10,6 +10,8 @@
 				width: 100%
 		&__text
 			flex-basis: 48%
+			p 
+				font-size: 20px
 
 @media (max-width: 425px)
 	.factory
@@ -18,6 +20,9 @@
 			&__img
 				flex-basis: 100% 
 			&__text	
-				flex-basis: 100% 
+				flex-basis: 100%
+				p 
+					font-size: 16px
+			
 
 		
