--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,3 +12,6 @@
 @import 'blocks/steps'
 @import 'blocks/review'
 @import 'blocks/factory'
+@import 'blocks/contacts'
+@import 'blocks/questions'
+@import 'blocks/footer'
